--- a/DemoJquery/vidu2.html
+++ b/DemoJquery/vidu2.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .msg-err{ color: red; padding: 10px; border: 1px solid red; background:yellow}
+    </style>
 </head>
 <body>
     <p>Tạo form login, có username và pass, nút bấm. Khi bấm nút, nếu chưa nhập
@@ -27,7 +30,16 @@
                 if(u.length < 3){
                     // thông báo lỗi
                     $('#msg').html('<b>Lỗi rồi:</b> Bạn cần nhập username từ 3 ký tự')//
+                    // nếu đổi $('#msg').html thành $('#msg').text() thì sao?
+                    $('#msg').addClass('msg-err');
+                    $('input[name=username]').css("border", "1px solid red")
+                }else{
+                    $('#msg').removeClass('msg-err');
+                    $('input[name=username]').css("border", "") // gán bằng rỗng để xóa border
                 }
+
+
+
             });
         });
     </script>
